fixes of the gitnore

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-EMAIL_PASSKEY=
-EMAIL_ADDRESS=
-RECIPIENT_EMAIL=
+EMAIL_PASSKEY=rjay xpqo cxxv dpvo
+EMAIL_ADDRESS=rejectfinancebillke2025@gmail.com
+RECIPIENT_EMAIL=rejectfinancebillke2025@gmail.com
 NEXT_PUBLIC_APP_URL=http://localhost:3000
